# GMPI

./: CMakeLists.txt  README.md  gmpi_plugin.cmake
Converters/Shared/: DirectXGfx.cpp  DirectXGfx.h  Drawing.h  DrawingFrame_win32.cpp  DrawingFrame_win32.h  Drawing_API.h  GraphicsRedrawClient.h  IPluginGui.cpp  IPluginGui.h  MyTypeTraits.cpp  RawConversions.h  RawView.h  TimerManager.h  conversion.cpp  fast_gamma.cpp  fast_gamma.h  it_enum_list.cpp  it_enum_list.h  midi_defs.cpp  midi_defs.h  mp_api.h  mp_interface_wrapper.h  mp_sdk_audio.cpp  mp_sdk_audio.h  mp_sdk_gui.cpp  mp_sdk_gui.h  mp_sdk_gui2.h  mp_sdk_guid.h  platform_string.h  se_types.h  string_utilities.h  xp_simd.h  xplatform.h
Converters/Standalone/: Resource.h  Standalone.cpp  Standalone.rc  Standalone.sln  Standalone.vcxproj  Standalone.vcxproj.filters
Converters/VST3/: Base64.h  BundleInfo.cpp  BundleInfo.h  CMakeLists.txt  ContainerView.cpp  ContainerView.h  Controller.cpp  Controller.h  ControllerHost.h  DirectXGfx.h  Drawing.h  DrawingFrame_win32.cpp  DrawingFrame_win32.h  Drawing_API.h  ElatencyContraintType.h  FileFinder.cpp  FileFinder.h  FileWatcher.cpp  FileWatcher.h  GmpiApiAudio.h  GmpiApiCommon.h  GmpiSdkCommon.h  HostControls.cpp  HostControls.h  IGuiHost2.h  IModelBase.cpp  IModelBase.h  IPluginGui.cpp  IViewChild.cpp  IViewChild.h  MpParameter.cpp  MpParameter.h  MpString.h  MyTypeTraits.cpp  MyTypeTraits.h  MyVstPluginFactory.cpp  MyVstPluginFactory.h  PatchCables.cpp  PatchCables.h  Presenter.h  (+44 more)
Core/: AudioPlugin.cpp  AudioPlugin.h  Common.cpp  Common.h  GmpiApiAudio.h  GmpiApiCommon.h  GmpiApiDrawingClient.h  GmpiApiEditor.h  GmpiMidi.h  GmpiSdkCommon.h  Processor.cpp  Processor.h  RefCountMacros.h  mp_interface_wrapper.h  mp_sdk_audio.cpp  mp_sdk_audio.h  mp_sdk_common.cpp  mp_sdk_common.h
Docs/: FAQ.md  GMPI_Specs.md
Extensions/: EmbeddedFile.h  EmbeddedFileHelper.h  PinCount.h
Hosting/: Bundle.cpp  Bundle.h  controller_holder.cpp  controller_holder.h  dynamic_linking.cpp  dynamic_linking.h  gmpi_factory.cpp  gmpi_factory.h  message_queues.cpp  message_queues.h  parse_enum.h  plugin_holder.cpp  plugin_holder.h  processor_holder.cpp  processor_holder.h  xml_spec_reader.cpp  xml_spec_reader.h
Projections/plain_c/: gmpi.h
Projections/plain_c/Core/: gmpi.h  gmpi_audio.h
Projections/plain_c/Samples/: CMakeLists.txt
Projections/plain_c/Samples/AGain/: AGain.c  AGain.h  AGain.xml  CMakeLists.txt  Factory.c  plugin.rc  resource.h
Samples/: CMakeLists.txt
Samples/AGain/: AGain.cpp  AGain.xml  CMakeLists.txt  plugin.rc  resource.h
Samples/AGraphics/: AGraphics.xml  AGraphicsGui.cpp  CMakeLists.txt
Samples/Gain/: CMakeLists.txt  Gain.cpp
Samples/TestDatatypes/: CMakeLists.txt  TestDatatypes.cpp
